--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .banner-area {
-  background: url('./images/c.jpg') no-repeat center center fixed;
+  background: url('./images/background.jpg') no-repeat center center fixed;
   background-size: cover;
 
   text-align: center;
