--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
   text-align: center;
   vertical-align: middle;
-  color: white;
+  color: rgb(41, 65, 3);
 }
 .banner-area-headline {
   font-size: 4rem;
@@ -28,6 +28,10 @@
 .intro-text {
   padding-top: 150px;
   padding-bottom: 100px;
+}
+
+.intro-text.container {
+  text-shadow: 3px 3px #033406;
 }
 
 @media (min-width: 768px) {
