--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 
   text-align: center;
   vertical-align: middle;
-  color: rgb(41, 65, 3);
+  color: white;
 }
 .banner-area-headline {
   font-size: 4rem;
