--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@
   --bold-font: 700;
   --bolder-font: 900;
   --bg-color: #fcfcfc;
-  --primary-color: #4756df;
-  --secondary-color: #ff7235;
-  --primary-shadow: #8b8eaf;
-  --secondary-shadow: #a17a69;
+  --primary-color: #6fb3aa;
+  --secondary-color: #d89530;
+  --primary-shadow: #295340;
+  --secondary-shadow: #683e2c;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
