--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
   --bolder-font: 900;
   --bg-color: #fcfcfc;
   --primary-color: #6fb3aa;
-  --secondary-color: #d89530;
+  --secondary-color: #0e6929;
   --primary-shadow: #295340;
-  --secondary-shadow: #683e2c;
+  --secondary-shadow: #295340;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
