fix style & added blog

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@
   --bold-font: 700;
   --bolder-font: 900;
   --bg-color: #fcfcfc;
-  --primary-color: #6fb3aa;
+  --primary-color: #31afb7;
   --secondary-color: #0e6929;
-  --primary-shadow: #295340;
+  --primary-shadow: #146a6d;
   --secondary-shadow: #295340;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
