--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,9 @@
   --bolder-font: 900;
   --bg-color: #fcfcfc;
   --primary-color: #31afb7;
-  --secondary-color: #0e6929;
-  --primary-shadow: #146a6d;
-  --secondary-shadow: #295340;
+  --secondary-color: #59bf7e;
+  --primary-shadow: #144649;
+  --secondary-shadow: #244c32;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
